syntax = 'proto3';

package criextension.api;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "k8s.io/cri-api/pkg/apis/runtime/v1alpha2/api.proto";

option go_package = "criextension";

option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.goproto_getters_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;

service CRIExtensionRuntimeService {
    rpc UpdateContainerResourcesV2(UpdateContainerResourcesV2Request) returns (UpdateContainerResourcesV2Response) {}
}

message UpdateContainerResourcesV2Request {
    string container_id = 1; 
    runtime.v1alpha2.WindowsContainerResources std_windows_resources = 2;
	runtime.v1alpha2.LinuxContainerResources std_linux_resources = 3;
    map<string, string> annotations = 4;
}

message UpdateContainerResourcesV2Response {}

